--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,51 @@
+<div class="container text-center">
+  <div class="row">
+    <div class="col-md-12">
+      <h1>Eat-Da-Burger</h1>
+      <img src="/public/assets/img/burger.png" width="300">
+      <br>
+    </div>
+  </div>
 
+  <div class="row">
+    <div class="col-md-6">
+      <h2>Uneaten Burgers</h2>
+      <ol>
+        {{#each burgers}}
+        {{#unless devoured}}
+        {{> burgers/burger-block devoured=false}}
+        {{/unless}}
+        {{/each}}
+      </ol>
+    </div>
+    <div class="col-md-6">
+      <h2>Devoured Burgers</h2>
+      <ol>
+        {{#each burgers}}
+        {{#if devoured}}
+        {{> burgers/burger-block devoured=true}}
+        {{/if}}
+        {{/each}}
+      </ol>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Add a Burger</h2>
+      <form class="add-burger">
+
+        <div class="form-group">
+          <label for="burger-name">Burger Name:</label>
+          <input type="text" id="burger-name" name="burger_name">
+        </div>
+
+        <button type="submit" id="submit" class="btn btn-dark">Add Burger</button>
+      </form>
+
+    </div>
+  </div>
+
+  <footer>
+  </footer>
+</div>
